# smartiq-docs

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: tags.md
docs/about/: childhood.md
docs/blog/posts/: 2024-07-11-Hello_World.md
docs/coding/: my-first-java-file.md
docs/develop_guide/: index.md  markdown.md  python_style.md  restful_guide.md
docs/domain_model/: concept.md  network.md
docs/user_guide/: ln_quanta.md
